@@ -255,6 +255,8 @@ name|fieldFragList
 init|=
 name|getFieldFragList
 argument_list|(
+name|fragListBuilder
+argument_list|,
 name|fieldQuery
 argument_list|,
 name|reader
@@ -316,6 +318,8 @@ name|fieldFragList
 init|=
 name|getFieldFragList
 argument_list|(
+name|fragListBuilder
+argument_list|,
 name|fieldQuery
 argument_list|,
 name|reader
@@ -344,7 +348,7 @@ name|maxNumFragments
 argument_list|)
 return|;
 block|}
-comment|/**    * return the best fragment.    *     * @param fieldQuery {@link FieldQuery} object    * @param reader {@link IndexReader} of the index    * @param docId document id to be highlighted    * @param fieldName field of the document to be highlighted    * @param fragCharSize the length (number of chars) of a fragment    * @param preTags pre-tags to be used to highlight terms    * @param postTags post-tags to be used to highlight terms    * @param encoder an encoder that generates encoded text    * @return the best fragment (snippet) string    * @throws IOException    */
+comment|/**    * return the best fragment.    *     * @param fieldQuery {@link FieldQuery} object    * @param reader {@link IndexReader} of the index    * @param docId document id to be highlighted    * @param fieldName field of the document to be highlighted    * @param fragCharSize the length (number of chars) of a fragment    * @param fragListBuilder {@link FragListBuilder} object    * @param fragmentsBuilder {@link FragmentsBuilder} object    * @param preTags pre-tags to be used to highlight terms    * @param postTags post-tags to be used to highlight terms    * @param encoder an encoder that generates encoded text    * @return the best fragment (snippet) string    * @throws IOException    */
 DECL|method|getBestFragment
 specifier|public
 specifier|final
@@ -367,6 +371,12 @@ parameter_list|,
 name|int
 name|fragCharSize
 parameter_list|,
+name|FragListBuilder
+name|fragListBuilder
+parameter_list|,
+name|FragmentsBuilder
+name|fragmentsBuilder
+parameter_list|,
 name|String
 index|[]
 name|preTags
@@ -386,6 +396,8 @@ name|fieldFragList
 init|=
 name|getFieldFragList
 argument_list|(
+name|fragListBuilder
+argument_list|,
 name|fieldQuery
 argument_list|,
 name|reader
@@ -418,7 +430,7 @@ name|encoder
 argument_list|)
 return|;
 block|}
-comment|/**    * return the best fragments.    *     * @param fieldQuery {@link FieldQuery} object    * @param reader {@link IndexReader} of the index    * @param docId document id to be highlighted    * @param fieldName field of the document to be highlighted    * @param fragCharSize the length (number of chars) of a fragment    * @param maxNumFragments maximum number of fragments    * @param preTags pre-tags to be used to highlight terms    * @param postTags post-tags to be used to highlight terms    * @param encoder an encoder that generates encoded text    * @return created fragments or null when no fragments created.    *         size of the array can be less than maxNumFragments    * @throws IOException    */
+comment|/**    * return the best fragments.    *     * @param fieldQuery {@link FieldQuery} object    * @param reader {@link IndexReader} of the index    * @param docId document id to be highlighted    * @param fieldName field of the document to be highlighted    * @param fragCharSize the length (number of chars) of a fragment    * @param maxNumFragments maximum number of fragments    * @param fragListBuilder {@link FragListBuilder} object    * @param fragmentsBuilder {@link FragmentsBuilder} object    * @param preTags pre-tags to be used to highlight terms    * @param postTags post-tags to be used to highlight terms    * @param encoder an encoder that generates encoded text    * @return created fragments or null when no fragments created.    *         size of the array can be less than maxNumFragments    * @throws IOException    */
 DECL|method|getBestFragments
 specifier|public
 specifier|final
@@ -445,6 +457,12 @@ parameter_list|,
 name|int
 name|maxNumFragments
 parameter_list|,
+name|FragListBuilder
+name|fragListBuilder
+parameter_list|,
+name|FragmentsBuilder
+name|fragmentsBuilder
+parameter_list|,
 name|String
 index|[]
 name|preTags
@@ -464,6 +482,8 @@ name|fieldFragList
 init|=
 name|getFieldFragList
 argument_list|(
+name|fragListBuilder
+argument_list|,
 name|fieldQuery
 argument_list|,
 name|reader
@@ -503,6 +523,9 @@ specifier|private
 name|FieldFragList
 name|getFieldFragList
 parameter_list|(
+name|FragListBuilder
+name|fragListBuilder
+parameter_list|,
 specifier|final
 name|FieldQuery
 name|fieldQuery
