@@ -1641,6 +1641,9 @@ specifier|protected
 name|FragListBuilder
 name|getFragListBuilder
 parameter_list|(
+name|String
+name|fieldName
+parameter_list|,
 name|SolrParams
 name|params
 parameter_list|)
@@ -1650,8 +1653,10 @@ name|flb
 init|=
 name|params
 operator|.
-name|get
+name|getFieldParam
 argument_list|(
+name|fieldName
+argument_list|,
 name|HighlightParams
 operator|.
 name|FRAG_LIST_BUILDER
@@ -1704,6 +1709,9 @@ specifier|protected
 name|FragmentsBuilder
 name|getFragmentsBuilder
 parameter_list|(
+name|String
+name|fieldName
+parameter_list|,
 name|SolrParams
 name|params
 parameter_list|)
@@ -1711,6 +1719,8 @@ block|{
 return|return
 name|getSolrFragmentsBuilder
 argument_list|(
+name|fieldName
+argument_list|,
 name|params
 argument_list|)
 operator|.
@@ -1725,6 +1735,9 @@ specifier|private
 name|SolrFragmentsBuilder
 name|getSolrFragmentsBuilder
 parameter_list|(
+name|String
+name|fieldName
+parameter_list|,
 name|SolrParams
 name|params
 parameter_list|)
@@ -1734,8 +1747,10 @@ name|fb
 init|=
 name|params
 operator|.
-name|get
+name|getFieldParam
 argument_list|(
+name|fieldName
+argument_list|,
 name|HighlightParams
 operator|.
 name|FRAGMENTS_BUILDER
@@ -1950,16 +1965,6 @@ name|FIELD_MATCH
 argument_list|,
 literal|false
 argument_list|)
-argument_list|,
-name|getFragListBuilder
-argument_list|(
-name|params
-argument_list|)
-argument_list|,
-name|getFragmentsBuilder
-argument_list|(
-name|params
-argument_list|)
 argument_list|)
 decl_stmt|;
 name|FieldQuery
@@ -1970,14 +1975,6 @@ operator|.
 name|getFieldQuery
 argument_list|(
 name|query
-argument_list|)
-decl_stmt|;
-name|SolrFragmentsBuilder
-name|solrFb
-init|=
-name|getSolrFragmentsBuilder
-argument_list|(
-name|params
 argument_list|)
 decl_stmt|;
 comment|// Highlight each document
@@ -2065,8 +2062,6 @@ argument_list|(
 name|fvh
 argument_list|,
 name|fieldQuery
-argument_list|,
-name|solrFb
 argument_list|,
 name|req
 argument_list|,
@@ -2850,9 +2845,6 @@ parameter_list|,
 name|FieldQuery
 name|fieldQuery
 parameter_list|,
-name|SolrFragmentsBuilder
-name|solrFb
-parameter_list|,
 name|SolrQueryRequest
 name|req
 parameter_list|,
@@ -2878,6 +2870,16 @@ name|req
 operator|.
 name|getParams
 argument_list|()
+decl_stmt|;
+name|SolrFragmentsBuilder
+name|solrFb
+init|=
+name|getSolrFragmentsBuilder
+argument_list|(
+name|fieldName
+argument_list|,
+name|params
+argument_list|)
 decl_stmt|;
 name|String
 index|[]
@@ -2925,6 +2927,20 @@ operator|.
 name|SNIPPETS
 argument_list|,
 literal|1
+argument_list|)
+argument_list|,
+name|getFragListBuilder
+argument_list|(
+name|fieldName
+argument_list|,
+name|params
+argument_list|)
+argument_list|,
+name|getFragmentsBuilder
+argument_list|(
+name|fieldName
+argument_list|,
+name|params
 argument_list|)
 argument_list|,
 name|solrFb
